IN DEVELOPMENT

  BUGFIXES:

    * None yet ...

  IMPROVEMENTS:

    * None yet ...

  LIBRARY API BREAKS:

    * None yet ...

  INTERNALS:

    * None yet ...

  TESTING:

    * None yet ...


bzr 0.18rc1  2007-07-10

  BUGFIXES:

    * Do not suppress pipe errors, etc. in non-display commands
      (Alexander Belchenko, #87178)

    * Display a useful error message when the user requests to annotate
      a file that is not present in the specified revision.
      (James Westby, #122656)

    * Commands that use status flags now have a reference to 'help
      status-flags'.  (Daniel Watkins, #113436)

    * Work around python-2.4.1 inhability to correctly parse the
      authentication header.
      (Vincent Ladeuil, #121889)

    * Use exact encoding for merge directives. (Adeodato Simó, #120591)

    * Fix tempfile permissions error in smart server tar bundling under
      Windows. (Martin_, #119330)

    * Fix detection of directory entries in the inventory. (James Westby)

    * Fix handling of http code 400: Bad Request When issuing too many ranges.
      (Vincent Ladeuil, #115209)

    * Issue a CONNECT request when connecting to an https server
      via a proxy to enable SSL tunneling.
     (Vincent Ladeuil, #120678)

    * Fix ``bzr log -r`` to support selecting merge revisions, both 
      individually and as part of revision ranges.
      (Kent Gibson, #4663)
 
    * Don't leave cruft behind when failing to acquire a lockdir.
      (Martin Pool, #109169)

    * Don't use the '-f' strace option during tests.
      (Vincent Ladeuil, #102019).

    * Warn when setting ``push_location`` to a value that will be masked by
      locations.conf.  (Aaron Bentley, #122286)

    * Fix commit ordering in corner case (Aaron Bentley, #94975)

    *  Make annotate behave in a non-ASCII world (Adeodato Simó).

  IMPROVEMENTS:

    * The --lsprof-file option now dumps a text rendering of the profiling