@@ -165,7 +165,6 @@ class ExtendedTestResult(unittest._TextTestResult):
     def __init__(self, stream, descriptions, verbosity,
                  bench_history=None,
                  num_tests=None,
-                 use_numbered_dirs=False,
                  ):
         """Construct new TestResult.
 
@@ -196,7 +195,6 @@ class ExtendedTestResult(unittest._TextTestResult):
         self.skip_count = 0
         self.unsupported = {}
         self.count = 0
-        self.use_numbered_dirs = use_numbered_dirs
         self._overall_start_time = time.time()
     
     def extractBenchmarkTime(self, testCase):
@@ -303,8 +301,6 @@ class ExtendedTestResult(unittest._TextTestResult):
         for test, err in errors:
             self.stream.writeln(self.separator1)
             self.stream.write("%s: " % flavour)
-            if self.use_numbered_dirs:
-                self.stream.write('#%d ' % test.number)
             self.stream.writeln(self.getDescription(test))
             if getattr(test, '_get_log', None) is not None:
                 print >>self.stream
@@ -333,10 +329,9 @@ class TextTestResult(ExtendedTestResult):
                  bench_history=None,
                  num_tests=None,
                  pb=None,
-                 use_numbered_dirs=False,
                  ):
         ExtendedTestResult.__init__(self, stream, descriptions, verbosity,
-            bench_history, num_tests, use_numbered_dirs)
+            bench_history, num_tests)
         if pb is None:
             self.pb = self.ui.nested_progress_bar()
             self._supplied_pb = False
@@ -378,11 +373,7 @@ class TextTestResult(ExtendedTestResult):
                 + self._shortened_test_description(test))
 
     def _test_description(self, test):
-        if self.use_numbered_dirs:
-            return '#%d %s' % (self.count,
-                               self._shortened_test_description(test))
-        else:
-            return self._shortened_test_description(test)
+        return self._shortened_test_description(test)
 
     def report_error(self, test, err):
         self.pb.note('ERROR: %s\n    %s\n', 
@@ -447,19 +438,12 @@ class VerboseTestResult(ExtendedTestResult):
         # width needs space for 6 char status, plus 1 for slash, plus 2 10-char
         # numbers, plus a trailing blank
         # when NUMBERED_DIRS: plus 5 chars on test number, plus 1 char on space
-        if self.use_numbered_dirs:
-            self.stream.write('%5d ' % self.count)
-            self.stream.write(self._ellipsize_to_right(name,
-                                osutils.terminal_width()-36))
-        else:
-            self.stream.write(self._ellipsize_to_right(name,
-                                osutils.terminal_width()-30))
+        self.stream.write(self._ellipsize_to_right(name,
+                          osutils.terminal_width()-30))
         self.stream.flush()
 
     def _error_summary(self, err):
         indent = ' ' * 4
-        if self.use_numbered_dirs:
-            indent += ' ' * 6
         return '%s%s' % (indent, err[1])
 
     def report_error(self, test, err):
@@ -507,14 +491,12 @@ class TextTestRunner(object):
                  descriptions=0,
                  verbosity=1,
                  bench_history=None,
-                 use_numbered_dirs=False,
                  list_only=False
                  ):
         self.stream = unittest._WritelnDecorator(stream)
         self.descriptions = descriptions
         self.verbosity = verbosity
         self._bench_history = bench_history
-        self.use_numbered_dirs = use_numbered_dirs
         self.list_only = list_only
 
     def run(self, test):
@@ -529,7 +511,6 @@ class TextTestRunner(object):
                               self.verbosity,
                               bench_history=self._bench_history,
                               num_tests=test.countTestCases(),
-                              use_numbered_dirs=self.use_numbered_dirs,
                               )
         result.stop_early = self.stop_on_failure
         result.report_starting()
@@ -1894,7 +1875,6 @@ class TestCaseInTempDir(TestCaseWithMemoryTransport):
     """
 
     OVERRIDE_PYTHON = 'python'
-    use_numbered_dirs = False
 
     def check_file_contents(self, filename, expect):
         self.log("check contents of file %s" % filename)
@@ -2173,16 +2153,11 @@ def run_suite(suite, name='test', verbose=False, pattern=".*",
               stop_on_failure=False,
               transport=None, lsprof_timed=None, bench_history=None,
               matching_tests_first=None,
-              numbered_dirs=None,
               list_only=False,
               random_seed=None,
               exclude_pattern=None,
               ):
-    use_numbered_dirs = bool(numbered_dirs)
-
     TestCase._gather_lsprof_in_benchmarks = lsprof_timed
-    if numbered_dirs is not None:
-        TestCaseInTempDir.use_numbered_dirs = use_numbered_dirs
     if verbose:
         verbosity = 2
     else:
@@ -2191,7 +2166,6 @@ def run_suite(suite, name='test', verbose=False, pattern=".*",
                             descriptions=0,
                             verbosity=verbosity,
                             bench_history=bench_history,
-                            use_numbered_dirs=use_numbered_dirs,
                             list_only=list_only,
                             )
     runner.stop_on_failure=stop_on_failure
@@ -2229,7 +2203,6 @@ def selftest(verbose=False, pattern=".*", stop_on_failure=True,
              lsprof_timed=None,
              bench_history=None,
              matching_tests_first=None,
-             numbered_dirs=None,
              list_only=False,
              random_seed=None,
              exclude_pattern=None):
@@ -2256,7 +2229,6 @@ def selftest(verbose=False, pattern=".*", stop_on_failure=True,
                      lsprof_timed=lsprof_timed,
                      bench_history=bench_history,
                      matching_tests_first=matching_tests_first,
-                     numbered_dirs=numbered_dirs,
                      list_only=list_only,
                      random_seed=random_seed,
                      exclude_pattern=exclude_pattern)
@@ -2453,24 +2425,6 @@ def _rmtree_temp_dir(dirname):
                                  '%s' % os.path.basename(dirname))
         else:
             raise
-
-
-def clean_selftest_output(root=None, quiet=False):
-    """Remove all selftest output directories from root directory.
-
-    :param  root:   root directory for clean
-                    (if ommitted or None then clean current directory).
-    :param  quiet:  suppress report about deleting directories
-    """
-    import re
-    re_dir = re.compile(r'''test\d\d\d\d\.tmp''')
-    if root is None:
-        root = u'.'
-    for i in os.listdir(root):
-        if os.path.isdir(i) and re_dir.match(i):
-            if not quiet:
-                print 'delete directory:', i
-            _rmtree_temp_dir(i)
 
 
 class Feature(object):
