@@ -472,43 +472,6 @@ class TestRunBzrError(ExternalBase):
                 ['file-id', 'foobarbaz'])
 
 
-class TestSelftestCleanOutput(TestCaseInTempDir):
-
-    def test_clean_output(self):
-        # check that 'bzr selftest --clean-output' works correct
-        dirs = ('test0000.tmp', 'test0001.tmp', 'bzrlib', 'tests')
-        files = ('bzr', 'setup.py', 'test9999.tmp')
-        for i in dirs:
-            os.mkdir(i)
-        for i in files:
-            f = file(i, 'wb')
-            f.write('content of ')
-            f.write(i)
-            f.close()
-
-        root = os.getcwdu()
-        before = os.listdir(root)
-        before.sort()
-        self.assertEquals(['bzr','bzrlib','setup.py',
-                           'test0000.tmp','test0001.tmp',
-                           'test9999.tmp','tests'],
-                           before)
-
-        out, err = self.run_bzr('selftest --clean-output',
-                                working_dir=root)
-
-        self.assertEquals(['delete directory: test0000.tmp',
-                          'delete directory: test0001.tmp'],
-                          sorted(out.splitlines()))
-        self.assertEquals('', err)
-
-        after = os.listdir(root)
-        after.sort()
-        self.assertEquals(['bzr','bzrlib','setup.py',
-                           'test9999.tmp','tests'],
-                           after)
-
-
 class TestSelftestListOnly(TestCase):
 
     @staticmethod
